# etf-analyzer

./: .env.example  .gitignore  README.md  etf_config.example.yaml  main.py  pyproject.toml  requirements.txt  run_web.py
etf_analyzer/: __init__.py  config.py  trading_preferences.py
etf_analyzer/agent/: __init__.py  loop.py  planner.py  state.py
etf_analyzer/analysis/: __init__.py  rules.py  synthesizer.py
etf_analyzer/llm/: __init__.py  client.py
etf_analyzer/memory/: __init__.py  store.py  symbol_meta_cache.py
etf_analyzer/tools/: __init__.py  akshare_daily.py  akshare_flow.py  akshare_meta.py  mock_data.py  registry.py
etf_analyzer/web/: app.py
static/: app.js  index.html  style.css
