[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-analyzer"
version = "0.1.0"
description = "可扩展的 ETF 分析 Agent（工具调用 + Memory + 规则/LLM 合成）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
